# linobot

./: .env.dev  .gitignore  README.md  bot.py  pets.db  pyproject.toml  requirements.txt
bot2/plugins/bili/: __init__.py  alive.py  bilidbs.py  bilihelp.py  dyn_to_q.py  help.md  live2q.py  live_to_q.py  topdynamic.py  updynamic.py  uplive.py  video_ti_q.py
bot2/plugins/dirinit/: __init__.py  initDir.py
bot2/plugins/eat/: __init__.py
bot2/plugins/forup/: __init__.py  dahanghai.py  dyn.py  fans.py  follow.py  oplive.py  opmessage.py  opvideo.py
bot2/plugins/fuckyou/: __init__.py
bot2/plugins/funcs/: __init__.py  colorname.py  fixedname.py  getelement.py  lookfan.py  r18.py  randgirl.py  remind.py  songer.py  suiji.py  tspeak.py  welcome.py  whateat.py  wife.py  wifeclean.py  yiqingsec.py
bot2/plugins/ggdog/: __init__.py
bot2/plugins/help/: __init__.py  bilibilihelp.py  funnyfunc.py  helpmenu.py  other_plugin_help.py  xiuxianhelp.py
bot2/plugins/mgroup/: __init__.py  aior18.py
bot2/plugins/mypets/: __init__.py  petdbs.py
bot2/plugins/rand/: __init__.py  suiji.py  welcome.py
bot2/plugins/sql/: __init__.py  create_sql.py  del_sql.py  insert_sql.py  select_sql.py  update_sql.py
bot2/plugins/test/: __init__.py  test.py
bot2/plugins/wife/: __init__.py  wifedbs.py
bot2/plugins/xiuxian/: AMonster.py  AT.py  Bank.py  Money.py  Myself.py  Role.py  __init__.py  atboss.py  atmon.py  ban.py  bet.py  biguan.py  drug_init.json  evolve_init.json  gua.py  help.md  helpxiuxian.py  herbs_init.json  jingjiehelp.py  lookboss.py  moncfg.py  morege.py  ore_init.json  (+12 more)
(+8 files in other folders)
