[tool.poetry]
name = "bot2"
version = "0.1.0"
description = "bot2"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_remake", "nonebot_plugin_songpicker2", "nonebot_plugin_simplemusic", "nonebot_plugin_petpet", "nonebot_plugin_imageutils", "nonebot_plugin_today_in_history", "nonebot_plugin_setu4", "nonebot_plugin_smart_reply", "nonebot_plugin_tarot", "nonebot_plugin_ddcheck", "nonebot_plugin_aidraw", "nonebot_plugin_crazy_thursday", "nonebot_plugin_apscheduler", "nonebot_plugin_mockingbird"]
plugin_dirs = ["bot2/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
